# cpp-dyn

./: CMakeLists.txt  README.md  format.sh
docs/: details.md
include/cpp_dyn/: common.hpp  cpp_dyn.hpp  tuple.hpp
include/khct/: cpp_dyn.hpp
src/: cpp_dyn.cppm
tests/: basic_tests.cpp  compile_time_tests.cpp  test_common.hpp  test_module.cpp
